Remove "--enable-preview" flag on java compilation